--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <section class="content places">
     <div class="card">
-      <h2 class="card__title">Куршская <span class="card__accent">коса</span></h2>
+      <h2 class="card__title">Куршская коса</h2>
       <div class="card__website">
         <p class="card__url-heading">URL</p>
         <a href="http://park-kosa.ru" class="link card__link" target="_blank">park-kosa.ru</a>
